# RealisticCameraOpenGL

./: .gitignore  CMakeLists.txt  OpenglUtils.cpp  OpenglUtils.h  README.md  SceneDescription.cpp  SceneDescription.h  SceneReader.cpp  SceneReader.h  SceneRenderer.cpp  SceneRenderer.h  main.cpp  main_assimp_test.cpp  main_tester.cpp  opengl_utils.cpp  opengl_utils.h  parameters_depth_of_view.py  world.cc  world.h
assets/: basic_scene.dae  threeObjectScene.dae
assets/scene/: plane_render.json  scene1.json  scene1_test.json  scene1_test_normals.json  scene1_with_plane.json  scene_all_textures.json  scene_cans.json  scene_cans_with_plane.json  scene_cans_with_plane_near.json  scene_chess.json
base_code/: main.cc  main_assimp_test.cpp  obj.cc  obj.h  world.cc
blender_scene/: SceneToRenderize.blend
input/: scene_schema.json
libs/: obj.cc  png.cc  png.h
shaders/: accumulate.frag  myCustomGouraudShader.frag  myCustomGouraudShader.vert  myCustomPhongShader.frag  myCustomPhongShader.vert  myCustomShader.vert  myGourd.frag  myGourd.vert  my_gourd.frag  my_gourd.vert  phong.frag  phong.vert  sum16Textures.frag  sum16Textures.vert  sumPonderedTextures.frag  sumTextures.frag  sumTextures.vert  sumWeightedTextures.frag
